--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,10 +40,12 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_wordprees"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/wordpress">
+                    android:src="@drawable/wordpress"
+                    android:text="@string/pindah_hal1">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
@@ -73,10 +75,12 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_youtube"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/youtube">
+                    android:src="@drawable/youtube"
+                    android:text="@string/pindah_hal2">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
@@ -106,10 +110,12 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_twitter"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/twitter">
+                    android:src="@drawable/twitter"
+                    android:text="@string/pindah_hal3">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
@@ -139,10 +145,12 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_whatsapp"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/whatsapp">
+                    android:src="@drawable/whatsapp"
+                    android:text="@string/pindah_hal4">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
@@ -172,10 +180,12 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_instagram"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/instagram">
+                    android:src="@drawable/instagram"
+                    android:text="@string/pindah_hal5">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
@@ -205,16 +215,18 @@
                 android:orientation="vertical"
                 android:layout_gravity = "center_horizontal|center_vertical">
                 <ImageView
+                    android:id="@+id/iv_facebook"
                     android:layout_width="110dp"
                     android:layout_height="110dp"
                     android:layout_gravity = "center_horizontal|center_vertical"
-                    android:src="@drawable/facebook">
+                    android:src="@drawable/facebook"
+                    android:text="@string/pindah_hal6">
                 </ImageView>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="facecebook"
+                    android:text="facebook"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold">
@@ -223,4 +235,7 @@
         </androidx.cardview.widget.CardView>
 
 
+
+
     </GridLayout>
+</RelativeLayout>
